Fixed another thing

--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Submerge Immersion Tracker - Track your language immersion efficiently!</title>
-        <link rel="stylesheet" href="landing/landingstyle.css" type="text/css" />
+        <link rel="stylesheet" href="landingstyle.css" type="text/css" />
         <link rel="stylesheet" href="res/styles/reset.css" />
         <link rel="stylesheet" href="res/styles/navbar.css" />
         <link rel="shortcut icon" href="res/favicon.ico" type="image/x-icon" />
@@ -33,7 +33,7 @@
             <h1 class="entry-effect go">Immersion? 🤔</h1>
             <div class="two-columns entry-effect go">
                 <div>
-                    <img src="landing/dash.jpg" alt="Dashboard with graphs" />
+                    <img src="dash.jpg" alt="Dashboard with graphs" />
                 </div>
                 <div>
                     <p>
@@ -98,6 +98,6 @@
             </div>
         </footer>
 
-        <script src="landing/landingscript.js"></script>
+        <script src="landingscript.js"></script>
     </body>
 </html>
