--- a/landing.html
+++ b/landing.html
@@ -44,7 +44,7 @@
                         their parents talking and they read their little children's books.
                     </p>
                     <p>
-                        <b>Submersive Tracker is a tracker of your immersion:</b> the time you spend
+                        <b>Submerge Immersion Tracker is a tracker of your immersion:</b> the time you spend
                         immersing, what kind of immersion you do (reading, listening, active,
                         passive), and the content you choose to do it with. This app gives you an
                         intuitive interface to add that data to the current day or edit previous
